Item, Customer Validations completed/ item description set length to 2000 charactors